--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ dependencies = [
     "transformers>=4.43.3",
     "datasets>=2.20.0",
     "torch>=2.4.0",
-    "numpy>=2.0.1",
+    "numpy<2",
+    "accelerate>=0.33.0",
+    "tqdm>=4.66.4",
+    "scikit-learn>=1.5.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
